--- a/VideoChat/ClientApp/package.json
+++ b/VideoChat/ClientApp/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "client-app",
-  "version": "0.0.0",
+  "name": "video-chat",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
+    "@angular/animations": "~7.1.4",
+    "@angular/common": "~7.1.4",
+    "@angular/compiler": "~7.1.4",
+    "@angular/core": "~7.1.4",
+    "@angular/forms": "~7.1.4",
+    "@angular/platform-browser": "~7.1.4",
+    "@angular/platform-browser-dynamic": "~7.1.4",
+    "@angular/router": "~7.1.4",
+    "@aspnet/signalr": "1.1.0",
+    "twilio-video": "2.0.0-beta5",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.3",
-    "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "~7.1.4",
+    "@angular/compiler-cli": "~7.1.4",
+    "@angular/language-service": "~7.1.4",
     "@types/node": "~8.9.4",
+    "codelyzer": "~4.5.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.1.6"
   }
 }
